# ECE-552-project

./: README.md
FPGA_impl/: FPGA_impl.xpr  VpuHsa_tb_behav_2x2.wcfg
FPGA_impl/FPGA_impl.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  project.wpc  synthesis.wdf  webtalk_pa.xml
FPGA_impl/FPGA_impl.hw/backup/: hw_ila_data_1.ila
FPGA_impl/FPGA_impl.hw/hw_1/: hw.xml
FPGA_impl/FPGA_impl.runs/clk_wiz_0_synth_1/: .vivado.begin.rst  clk_wiz_0.tcl  clk_wiz_0.vds  clk_wiz_0_utilization_synth.rpt  dont_touch.xdc  gen_run.xml  project.wdf  vivado.jou  vivado.pb
FPGA_impl/FPGA_impl.runs/ila_0_synth_1/: .vivado.begin.rst  gen_run.xml  ila_0.tcl  ila_0.vds  ila_0_utilization_synth.pb  ila_0_utilization_synth.rpt  project.wdf  vivado.jou  vivado.pb
FPGA_impl/FPGA_impl.runs/impl_1/: .init_design.begin.rst  .opt_design.begin.rst  .phys_opt_design.begin.rst  .route_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  MpuHsa_Wrapper.bit  MpuHsa_Wrapper.ltx  MpuHsa_Wrapper.tcl  MpuHsa_Wrapper.vdi  MpuHsa_Wrapper_bus_skew_routed.pb  MpuHsa_Wrapper_bus_skew_routed.rpt  MpuHsa_Wrapper_bus_skew_routed.rpx  MpuHsa_Wrapper_opt.dcp  (+74 more)
cpp_impl/: CMakeLists.txt
cpp_impl/include/: Hsa.hh  Mac.hh  Mpu.hh  MpuHsa.hh  SpMac.hh  SpMpu.hh  SpVpu.hh  SpVpu.txt  Vpu.hh  WsMac.hh
cpp_impl/src/: main.cc
project_proposal/: .refs.bib.swp  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex
status_report/: main.aux  main.fdb_latexmk  main.fls  main.tex  refs.bib
uart_comms/: .main.py.swp  .utility.py.swp  main.py  old_main.py  old_utility.py  utility.py
(+167 files in other folders)
